--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ a:hover{
 }
 /* head part*/
 
-#header{
+.tetepage{
 	font-family: Georgia, serif;
 	height: 420px;
 
@@ -83,7 +83,7 @@ a:hover{
 }
 /* Middle part */
 
-#Main{
+.centrepage{
 	background-color: #F0F8FF;
     height: 450px;
     width: 900px ;
@@ -146,7 +146,7 @@ p{
 	text-align: center;
 }
 
-#footer{
+.piedpage{
 	height: 100px;
     margin-left: -30px;
     margin-right: -30px;
